# spotify-lyrics-proxy

./: .gitignore  .justfile  Cargo.toml  README.md  config.toml
src/: constants.rs  main.rs
