[package]
name = "spotify-lyrics-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = "0.4.33"
lazy_static = "1.4.0"
listenfd = "1.0.1"
paris = { version = "1.5.15", features = ["macros", "timestamps"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tracing-subscriber = "0.3.18"
ua_generator = "0.3.5"
